# tmux

./: Makefile.am  README  cmd-list-keys.c  cmd.c  format.c  notify.c  plugin.c  server.c  status.c  tmux.1  tmux.h
plugins/: README.md
plugins/cmd-print/: Makefile  cmd-print.c
plugins/cmd-register-plugin/: .gitignore  Makefile  cmd-register-plugin.c
plugins/format-shell/: Makefile  plugin.c
plugins/pretty-cwd/: Cargo.toml
plugins/pretty-cwd/src/: display_path.rs  lib.rs
plugins/reverse-format/: Makefile  reverse.c
plugins/smiley-window-names/: Cargo.toml
plugins/smiley-window-names/src/: lib.rs
plugins/trim/: Cargo.toml  LICENSE
plugins/trim/src/: lib.rs
